<resources>
    <!-- app -->
    <string name="app_name">Food-O-Mat</string>
    <!-- titles -->
    <string name="title_random">Zufall</string>
    <string name="title_dashboard">Gericht des Tages</string>
    <string name="title_search">Suche</string>
    <string name="title_new_meal">Neues Gericht</string>
    <string name="title_singleResult">1 Ergebnis</string>
    <string name="title_results">%1$d Ergebnisse</string>

    <!-- common -->
    <string name="no">Nein</string>
    <string name="yes">Ja</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">Okay</string>

    <!-- data with units -->
    <string name="caloriesWithUnit">%1$d kcal</string>
    <string name="nutritionsWithUnit">%1$s g</string>


    <string name="categories">Kategorien</string>
    <string name="noMealWithParamsAvailableToast">Kein Gericht zu diesen Kriterien verfügbar</string>


    <!-- meal item -->
    <string name="category">Kategorie:</string>
    <string name="calories">Kalorien:</string>
    <string name="carbohydrates">Kohlenhydrate:</string>
    <string name="proteins">Eiweiß:</string>
    <string name="fats">Fett:</string>
    <string name="isVeggie">Vegetarisch (möglich)?:</string>
    <string name="isVegan">Vegan (möglich)?:</string>

    <!--meal detail fragment-->
    <string name="editLabel">Ändern</string>
    <string name="deleteLabel">Löschen</string>
    <string name="delete_question">Gericht %1$s wirklich löschen?</string>
    <string name="delete_dialog_title">Achtung</string>

    <!--random tab-->
    <string name="randomMealButtonLabel">Zufälliges Gericht anzeigen</string>
    <!--dashboard tab-->
    <string name="newMealButtonLabel">Neues Gericht hinzufügen</string>
    <string name="mealOfTheDay">Gericht des Tages</string>
    <!--search tab-->
    <string name="searchMealButtonLabel">Gericht suchen</string>

    <!--add or update meal fragment-->
    <string name="title_meal_detail">Name des Gerichts</string>
    <string name="new_meal_name">Name des Gerichts</string>
    <string name="new_category">Kategorie</string>
    <string name="new_calories">Kalorien</string>
    <string name="new_carbohydrates">Kohlenhydrate</string>
    <string name="new_proteins">Eiweiß</string>
    <string name="new_fats">Fett</string>
    <string name="new_isVeggie">Vegetarisch (möglich)?</string>
    <string name="new_isVegan">Vegan (möglich)?</string>
    <string name="save_meal_button_text">Speichern</string>

    <!--Descriptions for accessibility-->
    <string name="exampleMealPictureDescription">Beispielbild des Gerichts</string>
    <string name="editOrDeleteMealButtonDescription">Button zum Ändern oder Löschen des Gerichts</string>
    <string name="isVeganLabelDescription">Ist das Gericht Vegan?</string>
    <string name="isVeggieLabelDescription">Ist das Gericht vegetarisch?</string>
    <string name="title_dashboard_bottom_bar">Übersicht</string>

    <!--Top bar menu entries-->
    <string name="settings">Einstellungen</string>
    <string name="importMeals">Mahlzeiten importieren (.csv)</string>
    <string name="exportMeals">Mahlzeiten exportieren (.csv)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minimalCaloriesHint">0000</string>
    <string name="maximalCaloriesHint">1000</string>

    <!-- error messages -->
    <string name="nameMissingError">Name fehlt</string>
    <string name="categoryMissingError">Kategorie fehlt</string>
    <string name="caloriesMissingError">Kalorien fehlen</string>
    <string name="invalidNumberFormatError">Ungültiges Zahlenformat</string>
    <string name="carbonhydratesMissingError">Kohlenhydrate fehlen</string>
    <string name="proteinsMissingError">Eiweiß fehlt</string>
    <string name="fatsMissingError">Fett fehlt</string>
    <string name="caloriesVeryHighError">Sehr hohe Kalorien. Vielleicht ein Fehler?</string>
    <string name="caloriesToLowError">Zu niedriger Wert für das Kalorienminimum</string>
    <string name="caloriesToHighError">Zu hoher Wert für das Kalorienmaximum</string>
    <string name="caloriesEmptyError">Kalorienangabe fehlt</string>
    <string name="caloriesFormatError">Falsches Zahlenformat</string>
    <string name="add_new_ingredient">Neue Zutat hinzufügen</string>
    <string name="add_meal_directly">via Nährwerte</string>
    <string name="add_meal_via_ingredients">Via Zutaten</string>
    <string name="ingredientNameHint">Name</string>
    <string name="ingredientGewichtHint">Gewicht</string>
    <string name="ingredientCaloriesHint">Kalorien pro 100g</string>
    <string name="ingredientCarbohydratesHint">Kohlenhydrate pro 100g</string>
    <string name="ingredientFatsHint">Fett pro 100g</string>
    <string name="ingredientsProteinsHint">Eiweiß pro 100g</string>
    <string name="save_ingredient_button_text">Speichern</string>

</resources>