<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_random"
        android:name="com.fourquestionmarks.food_o_mat.ui.random.RandomFragment"
        android:label="@string/title_random"
        tools:layout="@layout/fragment_random" >
        <action
            android:id="@+id/action_navigation_random_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fourquestionmarks.food_o_mat.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_addOrUpdateMealFragment"
            app:destination="@id/addOrUpdateMealFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.fourquestionmarks.food_o_mat.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/addOrUpdateMealFragment"
        android:name="com.fourquestionmarks.food_o_mat.ui.AddOrUpdateMealFragment"
        android:label="fragment_add_or_update_meal"
        tools:layout="@layout/fragment_add_or_update_meal" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="mealID"
            app:argType="integer" />
        <action
            android:id="@+id/action_addOrUpdateMealFragment_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailFragment"
        android:name="com.fourquestionmarks.food_o_mat.ui.MealDetailFragment"
        android:label="@string/title_meal_detail"
        tools:layout="@layout/fragment_meal_detail">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="mealID"
            app:argType="integer" />
        <action
            android:id="@+id/action_mealDetailFragment_to_addOrUpdateMealFragment"
            app:destination="@id/addOrUpdateMealFragment" />
    </fragment>

</navigation>