<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addOrUpdateIngredientDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.AddOrUpdateIngredientDialogFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newIngredientNameLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.95">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newIngredientName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/ingredientNameHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/searchForIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.005"
                android:backgroundTint="@color/secondaryColor"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="?android:attr/textColorPrimary"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newIngredientWeightLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newIngredientWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientGewichtHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newIngredientCaloriesLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newIngredientCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientCaloriesHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newIngredientCarbohydratesLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newIngredientCarbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientCarbohydratesHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newIngredientFatsLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newIngredientFats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientFatsHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newIngredientProteinsLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newIngredientProteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientsProteinsHint" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>